#227 update for IDEA 2024.1